# qwer

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
cli/: Cargo.toml
cli/src/: dirs.rs  env.rs  help.rs  install.rs  list.rs  main.rs  plugin.rs  scripts.rs  version.rs
git/: Cargo.toml
git/src/: lib.rs
lib/: Cargo.toml
lib/src/: env.rs  lib.rs  plugins.rs  scripts.rs  versions.rs
lib/src/shell/: bash.rs  mod.rs  zsh.rs
prog/: Cargo.toml
prog/src/: lib.rs
src/: dirs.rs  ext.rs  git.rs  help.rs  install.rs  list.rs  main.rs  plugin.rs  plugins.rs  pretty.rs  process.rs  scripts.rs  util.rs  versions.rs
src/cmds/: env.rs  ext.rs  help.rs  install.rs  list.rs  mod.rs  plugin.rs  util.rs  uuse.rs  version.rs
src/git/: mod.rs
src/lib/: env.rs  scripts.rs
src/lib/shell/: bash.rs  mod.rs  zsh.rs
src/prog/: mod.rs
src/shell/: zsh.rs
