[package]
name = "qwer-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "qwer"
path = "src/main.rs"

[dependencies]
qwer = { path = "../lib" }
git = { path = "../git" }
clap = { version = "3.1.18", features = ["derive"] }
dirs = "4.0.0"
anyhow = "1.0.57"
tabled = "0.7.0"
duct = { git = "https://github.com/happenslol/duct.rs", branch = "add-stderr-reader" }
log = "0.4.17"
console = "0.15.0"
env_logger = "0.9.0"
toml = "0.5.9"
threadpool = "1.8.1"
