[package]
name = "qwer"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.31"
duct = "0.13.5"
log = "0.4.17"
console = "0.15.0"
regex = "1.5.6"
lazy_static = "1.4.0"
base64 = "0.13.0"
twox-hash = "1.6.3"
snap = "1.0.5"
num_threads = "0.1.6"
serde = { version = "1.0.137", features = ["derive"] }

[dev-dependencies]
tempfile = "3.3.0"
