[package]
name = "qwer"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0.31"
duct = { git = "https://github.com/happenslol/duct.rs", branch = "add-stderr-reader" }
log = "0.4.17"
console = "0.15.0"
regex = "1.5.6"
lazy_static = "1.4.0"
base64 = "0.13.0"
twox-hash = "1.6.3"
snap = "1.0.5"
num_threads = "0.1.6"
serde = { version = "1.0.137", features = ["derive"] }
prog = { path = "../prog" }
threadpool = "1.8.1"

[dev-dependencies]
tempfile = "3.3.0"
